fixes budget card layout bug

--- a/src/components/images/BudgetCardImage.scss
+++ b/src/components/images/BudgetCardImage.scss
@@ -5,7 +5,7 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  display: inline-flex;
+  display: flex;
   -webkit-box-align: center;
   -webkit-box-pack: center;
   border-top-left-radius: 14px;
